<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="8dp"
    app:cardCornerRadius="4dp"
    android:layout_margin="5dp"
    android:layout_width="match_parent"
    android:layout_height="150dp">
    <LinearLayout
        android:layout_margin="5dp"
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/item_giay_image"
            android:layout_weight="3"
            android:src="@drawable/icon_new"
            android:layout_width="0dp"
            android:layout_height="100dp"/>
        <LinearLayout
            android:layout_weight="7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/item_giay_ten"
                android:gravity="center"
                android:text="@string/t_n_s_n_ph_m3"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/item_giay_gia"
                android:text="@string/gi_250000"
                android:textColor="@android:color/holo_red_light"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/item_giay_mota"
                android:text="@string/m_t"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>