<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.GioHangActivity">

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textStyle="bold"
        android:visibility="gone"
        android:id="@+id/empty_cart"
        android:text="@string/gi_h_ng_tr_ng"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_cart"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Giỏ hàng"
        android:background="@color/purple_200"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleview_cart"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_cart"
        app:layout_constraintBottom_toTopOf="@id/layout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
    <LinearLayout
        android:id="@+id/layout1"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:text="@string/t_ng_thanh_to_n"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_weight="1"
            android:gravity="right"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:id="@+id/tongtien"
            android:text="@string/_50_000"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/btnmuahang"
            android:text="@string/mua_h_ng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>