<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChiTietActivity">
 <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="#3AD541"
        app:title="Chi tiết sản phẩm"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <FrameLayout
            android:id="@+id/framecart"
            android:layout_marginEnd="10dp"
            android:layout_gravity="right"
            android:layout_width="55dp"
            android:layout_height="?attr/actionBarSize">
            <com.nex3z.notificationbadge.NotificationBadge
                android:id="@+id/menu_sl"
                android:layout_gravity="top|right"
                android:layout_width="25dp"
                android:layout_height="25dp"/>
            <ImageView
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_cart"
                android:layout_width="35dp"
                android:layout_height="35dp"/>
        </FrameLayout>
 </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:ignore="MissingConstraints">
        <ImageView
            android:id="@+id/imgchitiet"
            android:src="@drawable/icon_new"
            android:layout_width="150dp"
            android:layout_height="200dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="5dp">
            <TextView
                android:id="@+id/txtensp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:text="@string/t_n_s_n_ph_m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txtgiasp"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:textColor="@android:color/holo_red_light"
                android:text="@string/gi_2500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/spinner"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:background="@drawable/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btnthemvaogiohang"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:backgroundTint="#3D85BF"
                android:text="@string/th_m_v_o_gi_h_ng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/layout1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:text="@string/m_t_chi_ti_t_s_n_ph_m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtmotachitiet"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </ScrollView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>